--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-*.python linguist-detectable=false
+*.java linguist-detectable=false
 *.js linguist-detectable=true
+*.py linguist-detectable=false
+*.python linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
